# t4kcommon

./: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.sh  install-deps.sh  t4k_common.pc.cmake  verify_t4k.sh
src/: CMakeLists.txt  t4k_common.h  t4k_loaders.c  t4k_main.c  t4k_menu.c  t4k_sdl.c  t4k_tts.c
src/linebreak/: CMakeLists.txt  linebreak_config.h.cmake
test/: verify_t4k.sh
